--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Test and build
         run: |
           npm ci
-          npm test
+          npm test --passWithNoTests
           npm run build
         env:
           LANG: en_US.UTF-8
